--- a/assets/css/demo-001.css
+++ b/assets/css/demo-001.css
@@ -5,86 +5,10 @@
     }
 }
 
-.tim-typo{
-    padding-left: 25%;
-    margin-bottom: 40px;
-    position: relative;
-}
-.tim-typo .tim-note{
-    bottom: 10px;
-    color: #c0c1c2;
-    display: block;
-    font-weight: 400;
-    font-size: 13px;
-    line-height: 13px;
-    left: 0;
-    margin-left: 20px;
-    position: absolute;
-    width: 260px;
-}
-
-.tim-row h3{
-    margin-top: 0;
-}
-.switch{
-    margin-right: 20px;
-}
 #navbar-full .navbar{
     border-radius: 0 !important;
     margin-bottom: 0;
 }
-.navigation-example{
-    margin-top: 0px;
-}
-.space{
-    height: 130px;
-    display: block;
-}
-.navigation-example .img-src{
-    background-attachment: scroll;
-}
-
-.navigation-example{
-    height: 660px;
-    background-image: url('../img/bg.jpg');
-    background-position: center center;
-    background-size: cover;
-    position: relative;
-}
-#notifications{
-    background-color: #FFFFFF;
-    display: block;
-    width: 100%;
-    position: relative;
-}
-.tim-note{
-    text-transform: capitalize;
-}
-
-.card{
-    background-color: #FFFFFF;
-    padding: 10px 0 20px;
-    width: 100%;
-}
-.card h3{
-    margin-bottom: 20px;
-}
-.card button{
-    margin-top: 30px;
-}
-.subscribe-form{
-    padding-top: 20px;
-}
-.subscribe-form .form-control{
-
-}
-
-.space-100{
-    height: 100px;
-    display: block;
-    width: 100%;
-}
-
 .be-social{
     padding-bottom: 20px;
 /*     border-bottom: 1px solid #aaa; */
@@ -96,27 +20,9 @@
 .txt-gray{
     color: #ddd !important;
 }
-.footer{
-    background-color: #DDDDDD;
-    background-image: url('../img/cover_4_blur.jpg');
-    background-attachment: fixed;
-    position: relative;
-}
+
 .heart{
     color: #FF3B30;
-}
-.footer .overlayer{
-    background-color: rgba(27, 27, 27, 0.7);
-    position: relative;
-}
-.footer .credits {
-    margin-top: 25px;
-    padding: 20px 0 15px;
-    text-align: center;
-    color: #EEE;
-}
-.footer .credits a{
-    color: #FFFFFF;
 }
 .social-share{
     float: left;
@@ -265,22 +171,12 @@
     margin-right: 0px;
     margin-top: 10px;
 }
-.footer h4{
-    margin: 0px 0 20px;
-}
+
 .space-30{
     height: 30px;
     display: block;
 }
-.credits{
-    display: block;
-    margin: 15px 0;
-    color: #ddd;
-    opacity: .8;
-}
-.credits a{
-    color: #FFFFFF;
-}
+
 .sharing-title{
     margin: 10px;
     line-height: 40px;
@@ -474,13 +370,15 @@
     background-color: var(--base-lighter-transparent-bg);
     margin-left: -80px;
     margin-right: -80px;
+    margin-bottom: 0;
     padding:  20px 80px 50px;
 }
 
 .census-hints {
     border: 1px solid var(--base-lighter);
     border-radius: 5px;
-    padding: 20px 30px;
+    margin-top: 30px;
+    padding: 0 30px 20px ;
 }
 
 .census-hints__list {
@@ -488,6 +386,22 @@
     padding: 0;
 }
 
+.how-to-count {
+    margin-bottom: 30px;
+}
+
 .census-hints__item {
     margin-bottom: 15px;
+}
+
+.footer {
+    border-top: 1px solid var(--base-lighter);
+    background-color: var(--base-light);
+    padding: 20px;
+}
+
+.footer__credits {
+    color: #fff;
+    margin: 5px 0;
+    text-align: center;
 }
