new colors and fonts

--- a/assets/css/styles-003.css
+++ b/assets/css/styles-003.css
@@ -1,3 +1,37 @@
+html {
+    --base: #000A8F;
+    --base-dark: #00065c;
+    --base-bg: #24296B;
+    --base-bg-em: #00428F;
+    --base-contrast: #fff;
+
+    --base-light: #8f97ff;
+    --base-lighter: #c2c6ff;
+    --base-lighter-transparent: rgba(0, 21, 137, .2);
+    --base-lighter-transparent-bg: rgba(0, 21, 137, .08);
+}
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    color: var(--base);
+}
+
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6, p, .navbar, .brand, .btn, .btn-simple, a, .td-name, td {
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+}
+
+a {
+    color: var(--base);
+    text-decoration: underline;
+}
+
+a:hover,
+a:focus {
+    color: var(--base-dark);
+}
 
 @media (min-width: 1440px) {
     .container {
@@ -5,9 +39,26 @@
     }
 }
 
+.navbar-collapse .nav li > a {
+    border-bottom: 4px solid var(--base-contrast);
+    margin: 0;
+    padding: 38px 18px 34px;
+}
+
+.navbar-collapse .nav li > a:hover,
+.navbar-collapse .nav li > a:active,
+.navbar-collapse .nav li > a:focus {
+    outline: none;
+    border-bottom-color: var(--base-dark);
+}
+
 @media (max-width: 767px) {
-    .navbar-collapse {
-        background-color: var(--base-light);
+    .navbar-collapse .nav li > a {
+        border-bottom: 0;
+        padding: 25px 18px;
+    }
+    .navbar-collapse .nav li > a:hover {
+       text-decoration: underline;
     }
 }
 
@@ -44,7 +95,7 @@ a[id]:not([href]) {
     height: 0;
     opacity: 0;
     position: relative;
-    top: -70px;
+    top: -100px;
 }
 a[id]:not([href]):target + .target-indicator,
 a[id]:not([href]):target + .target-indicator-wrapper .target-indicator,
@@ -72,39 +123,35 @@ a[id]:not([href]):target + section .target-indicator {
         transform: translate3d(3px, 0, 0);
     }
 }
-/*   EXTRA SHIT  */
-/* @cristina: fisier singular, folosit pentru efectul de blur la parallax in header */
+
 
 .navbar .navbar-nav > li > a {
+    text-decoration: none;
     transition: opacity .3s ease;
 }
 
-.logo-container{
-    margin-top: 10px;
+.navbar-white {
+    background-color: var(--base-contrast);
+    border-bottom-color: var(--base);
+}
+
+.navbar.navbar-white .navbar-toggle .icon-bar {
+    background-color: var(--base);
 }
 
 .logo-container .brand {
-    font-size: 18px;
-    font-weight: 700;
-    color: #fff;
+    font-size: 32px;
     float: left;
-    height: 50px;
-    line-height: 42px;
-    margin-left: 10px;
-    margin-top: 5px;
-    margin-bottom: 0;
-    text-transform: uppercase;
+    line-height: 96px;
+    margin: 0;
 }
 
-.navbar-custom-grey {
-    background-color: var(--base-light);
-    border-bottom-color: var(--base-lighter);
-}
+
+/* --------- info boxes -------------*/
 
 .info-boxes {
     display: flex; flex-wrap: wrap
 }
-
 
 .info-box {
     display: flex;
@@ -182,8 +229,9 @@ a[id]:not([href]):target + section .target-indicator {
 }
 
 .census-hints {
-    border: 1px solid var(--base-lighter);
+    background-color: var(--base-bg-em);
     border-radius: 5px;
+    color: var(--base-contrast);
     margin-top: 30px;
     padding: 0 30px 20px ;
 }
@@ -202,8 +250,7 @@ a[id]:not([href]):target + section .target-indicator {
 }
 
 .footer {
-    border-top: 1px solid var(--base-lighter);
-    background-color: var(--base-light);
+    background-color: var(--base-bg);
     padding: 20px;
 }
 
