--- a/assets/css/styles-004.css
+++ b/assets/css/styles-004.css
@@ -8,6 +8,9 @@ html {
 
     --base-bg-light: #EDF4FF;
     --base-border-light: rgba(0,10,143, .25);
+
+    --info-box-shadow: 0 4px 4px rgba(37, 150, 255, 0.05), 0 4px 16px rgba(37, 150, 255, 0.15);
+    --info-box-radius: 8px;
 }
 
 body {
@@ -324,8 +327,8 @@ a[id]:not([href]):target + section .target-indicator {
 
 .info-box__container {
     background: var(--base-contrast);
-    box-shadow: 0 4px 4px rgba(37, 150, 255, 0.05), 0 4px 16px rgba(37, 150, 255, 0.15);
-    border-radius: 8px;
+    box-shadow: var(--info-box-shadow);
+    border-radius: var(--info-box-radius);
     padding: 140px 23px 27px;
     width: 100%;
     position: relative;
@@ -359,6 +362,7 @@ a[id]:not([href]):target + section .target-indicator {
 /* ----------- say what? --------------- */
 .say-what {
     margin: 32px 0 0;
+    padding-bottom: 0;
 }
 .say-what__container {
     background: url("../img/person.png") calc(100% - 25px) bottom no-repeat;
@@ -381,6 +385,60 @@ a[id]:not([href]):target + section .target-indicator {
     font-size: 18px;
 }
 
+/* ------------ how to ----------------- */
+.how-to {
+    background: linear-gradient(180deg, var(--base-bg-light) 0%, #fff 60%, #fff 100%), #fff;
+    margin-bottom: 30px;
+    padding-top: 80px;
+}
+
+.debug .how-to {
+    background: none;
+}
+
+.how-to__title {
+    line-height: 85px;
+    font-size: 48px;
+    padding-left: 26px;
+}
+
+.how-to-prepare {
+    padding: 40px 0 45px;
+}
+.how-to-prepare__highlight {
+    background-color: #FFD540;
+    border-radius: var(--info-box-radius);
+    font-size: 32px;
+    line-height: 55px;
+    margin-right: 40px;
+    margin-bottom: 24px;
+    text-align: center;
+}
+.how-to-prepare__text {
+    font-size: 16px;
+    line-height: 24px;
+    padding-left: 16px;
+    margin-bottom: 24px;
+}
+
+.how-to-login,
+.how-to-religion {
+    background: var(--base-contrast);
+    box-shadow: var(--info-box-shadow);
+    border-radius: var(--info-box-radius);
+}
+
+.how-to-login {
+    margin: 20px 23px;
+    padding: 0 19px;
+}
+.how-to-login__title {
+    font-size: 32px;
+    line-height: 46px;
+    margin-bottom: 28px;
+}
+.how-to-religion {}
+
 /* ------------ hints ------------------ */
 
 .census-hints {
@@ -396,14 +454,11 @@ a[id]:not([href]):target + section .target-indicator {
     padding: 0;
 }
 
-.how-to-count {
-    margin-bottom: 30px;
-}
-
 .census-hints__item {
     margin-bottom: 15px;
 }
 
+/* ----------- footer ---------------- */
 .footer {
     background-color: var(--base-bg);
     padding: 20px;
