--- a/assets/css/styles-005.css
+++ b/assets/css/styles-005.css
@@ -7,6 +7,7 @@ html {
     --social: #2596FF;
 
     --base-bg-light: #EDF4FF;
+    --base-bg-lighter: #f6faff;
     --base-border-light: rgba(0,10,143, .25);
 
     --info-box-shadow: 0 4px 4px rgba(37, 150, 255, 0.05), 0 4px 16px rgba(37, 150, 255, 0.15);
@@ -213,6 +214,9 @@ a[id]:not([href]):target + section .target-indicator {
 .main {
     padding-top: 96px;
 }
+.debug .main {
+    margin-bottom: 500px;
+}
 
 .section {
     padding: 20px 0;
@@ -335,17 +339,14 @@ a[id]:not([href]):target + section .target-indicator {
 .summary {
     padding: 34px 38px
 }
-
 .info-boxes {
     display: flex;
     flex-wrap: wrap;
 }
-
 .info-box {
     display: flex;
     margin-bottom: 30px;
 }
-
 .info-box__container {
     background: var(--base-contrast);
     box-shadow: var(--info-box-shadow);
@@ -354,7 +355,6 @@ a[id]:not([href]):target + section .target-indicator {
     width: 100%;
     position: relative;
 }
-
 .info-box__title {
     text-align: center;
     font-size: 20px;
@@ -409,14 +409,12 @@ a[id]:not([href]):target + section .target-indicator {
 /* ------------ how to ----------------- */
 .how-to {
     background: linear-gradient(180deg, var(--base-bg-light) 0%, #fff 60%, #fff 100%), #fff;
-    margin-bottom: 30px;
+    margin-bottom: 75px;
     padding-top: 80px;
 }
-
 .debug .how-to {
     background: none;
 }
-
 .how-to__title {
     line-height: 85px;
     font-size: 48px;
@@ -596,7 +594,61 @@ a[id]:not([href]):target + section .target-indicator {
 .non-believers-hint {
     margin-bottom: 16px;
 }
-
+/* ------------- faq ----------------- */
+.faq {
+    background-color: var(--base-bg-lighter);
+    padding-bottom: 65px;
+    margin-bottom: 100px;
+}
+.debug .faq {
+    background: none;
+    border-bottom: 1px solid lightgrey;
+    padding-bottom: 18px;
+}
+.faq__container {
+    background: url("../img/faq.svg") 129px 250px no-repeat;
+}
+.fag__title {
+    font-size: 48px;
+    line-height: 60px;
+    margin: 0 0 10px;
+    padding: 46px 25px 0;
+}
+.faq__subtitle {
+    font-size: 32px;
+    line-height: 30px;
+    margin: 0;
+    padding: 0 25px;
+}
+.faq-question:not(:last-child) {
+    margin-bottom: 32px;
+}
+.faq-question__summary h4 {
+    font-size: 16px;
+    line-height: 24px;
+}
+/* ----------- why would i ----------- */
+.why-would-i {
+    margin-bottom: 35px;
+}
+.why-would-i__container {
+    padding-top: 32px;
+    background: url("../img/voting.svg") calc(95% + 2px) 26px no-repeat;
+}
+.why-would-i__title,
+.why-would-i__text {
+    padding-left: 25px;
+}
+.why-would-i__title {
+    font-size: 48px;
+    line-height: 60px;
+    margin-bottom: 34px;
+}
+.why-would-i__text {
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 24px;
+}
 /* ----------- footer ---------------- */
 .footer {
     background-color: var(--base-bg);
