partners and icons

--- a/assets/css/styles-005.css
+++ b/assets/css/styles-005.css
@@ -694,12 +694,88 @@ a[id]:not([href]):target + section .target-indicator {
 }
 .social-bottom__button--facebook {}
 .social-bottom__button--twitter {}
+/* ---------- partner ---------------- */
+.partners {
+    background: linear-gradient(180deg, transparent 0%, transparent 50%, var(--base-bg-light) 100%), transparent;
+    padding: 30px 0 252px;
+}
+.debug .partners {
+    background: none;
+}
+.partners__title {
+    font-size: 48px;
+    line-height: 112px;
+    margin-bottom: 48px;
+    text-align: center;
+}
+.partners__list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0 20px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.partners__box {
+    background-color: var(--base-contrast);
+    height: 60vw;
+    width: 60vw;
+    border-radius: var(--info-box-radius);
+    box-shadow: var(--info-box-shadow);
+    margin-bottom: 10vw;
+}
+.debug .partners__box {
+    background: none;
+}
+@media (min-width: 576px) {
+    .partners__list {
+        justify-content: space-between;
+    }
+    .partners__box {
+        height: 42vw;
+        width: 42vw;
+        margin-bottom: 4vw;
+    }
+}
+@media (min-width: 768px) {
+    .partners__box {
+        height: 300px;
+        width: 300px;
+        margin-bottom: 73px;
+    }
+}
+@media (min-width: 992px) {
+    .partners__box {
+        height: 280px;
+        width: 280px;
+        margin-bottom: 30px;
+    }
+}
+@media (min-width: 1200px) {
+    .partners__box {
+        height: 260px;
+        width: 260px;
+        margin-bottom: 19px;
+    }
+}
+@media (min-width: 1440px) {
+    .partners__box {
+        height: 300px;
+        width: 300px;
+        margin-bottom: 43px;
+    }
+}
+
+
 /* ----------- footer ---------------- */
 .footer {
     background-color: var(--base-bg);
     padding: 20px;
 }
-
+.debug .footer {
+    border-top: 1px solid lightcoral;
+    background: none;
+}
 .footer__content {
     display: flex;
     justify-content: stretch;
